fixed overflow

--- a/Content/Common.less
+++ b/Content/Common.less
@@ -94,6 +94,7 @@ header{
   left: 0;
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
   .photo{
     min-height: 100%;
     width: 100%;
